# no-more-configs

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Include/: NoMoreConfigs.h  StringParser.h
Include/Data/: ClassInfo.h  MemberInfo.h
Include/Info/: ClassInfo.h  MemberInfo.h
Resources/Data/: TestClass.nmc
Sources/: NoMoreConfigs.cpp  StringParser.cpp
Sources/Info/: ClassInfo.cpp
